// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseUrl > should throw if invalid url 1`] = `
[TypeError: InvalidUrlError: Provided value not a url is not a valid URL
https://tevm.sh/reference/errors]
`;

exports[`parseUrl > should throw if invalid url 2`] = `
[TypeError: InvalidUrlError: Provided value 0xzz20a88a199120aD52Dd9742C7430847d3cB2CD4 is not a valid URL
https://tevm.sh/reference/errors]
`;

exports[`parseUrl > should throw if invalid url 3`] = `
[TypeError: InvalidUrlError: Provided value 0x is not a valid URL
https://tevm.sh/reference/errors]
`;

exports[`parseUrl > should throw if invalid url 4`] = `
[TypeError: InvalidUrlError: Provided value 0 is not a valid URL
https://tevm.sh/reference/errors]
`;

exports[`parseUrl > should throw if invalid url 5`] = `
[TypeError: InvalidUrlError: Provided value  is not a valid URL
https://tevm.sh/reference/errors]
`;

exports[`parseUrl > should throw if invalid url 6`] = `
[TypeError: InvalidUrlError: Provided value true is not a valid URL
https://tevm.sh/reference/errors]
`;

exports[`parseUrl > should throw if invalid url 7`] = `
[TypeError: InvalidUrlError: Provided value not an address is not a valid URL
https://tevm.sh/reference/errors]
`;

exports[`parseUrl > should throw if invalid url 8`] = `
[TypeError: InvalidUrlError: Provided value 52 is not a valid URL
https://tevm.sh/reference/errors]
`;

exports[`parseUrl > should throw if invalid url 9`] = `
[TypeError: InvalidUrlError: Provided value 52 is not a valid URL
https://tevm.sh/reference/errors]
`;
